--- a/app/assets/stylesheets/_articles.scss.erb
+++ b/app/assets/stylesheets/_articles.scss.erb
@@ -32,7 +32,7 @@
           .home {
             height: 20px;
             width: 57px;
-            background-image: url(home_off.png);
+            background-image: url((<%= asset_path "home_off.png" %>);
             background-size: 57px 20px;
             margin-left: 50px;
             margin-top: 4px;
@@ -101,7 +101,7 @@
             }
           }
           .home:hover {
-            background-image: url(home_on.png);
+            background-image: url((<%= asset_path "home_on.png" %>);
           }
 
           .community {
