トレンド機能完成

--- a/app/assets/stylesheets/_timeline.scss
+++ b/app/assets/stylesheets/_timeline.scss
@@ -80,7 +80,8 @@
 
       .main-view{
         margin-bottom: 24px;
-        min-width: 85vh;
+        //min-width: 85vh;
+        width: 75vh;
         background-color: #fff;
         margin: auto 0;
         float: left;
