--- a/app/assets/stylesheets/_ranking.scss
+++ b/app/assets/stylesheets/_ranking.scss
@@ -1,7 +1,7 @@
 .a-side{
   width: 300px;
   margin-left: 20px;
-  padding-right: 110px;
+  //padding-right: 110px;
   float: left;
 
   .p-home_ad{
