--- a/app/assets/stylesheets/_tag_feed.scss
+++ b/app/assets/stylesheets/_tag_feed.scss
@@ -80,8 +80,7 @@
 
       .main-view{
         margin-bottom: 24px;
-        //min-width: 85vh;
-        width: 75vh;
+        min-width: 85vh;
         background-color: #fff;
         margin: auto 0;
         float: left;
@@ -120,8 +119,6 @@
               padding: 15px 0;
               border-bottom: 1px solid #eee;
               padding-left: 15px;
-               //box-sizing: inferit;
-
                 .my_picture{
                   margin-left: 20px;
                   float: left;
@@ -130,9 +127,7 @@
                   &__data{
                     font-size: 12px;
                     color: #999;
-                    margin: 0 0 5px 0px ;
-                    //box-sizing: inferit;
-                    display: flex;
+                    margin: 0 0 5px 0 ;
                   }
                   &__title{
                     display: inline-block;
@@ -140,21 +135,17 @@
                     line-height: 1.4;
                     font-size: 18px;
                     font-weight: 700;
-                    padding-right:20px;
-
                   }
                   &__tags{
                     font-size: 12px;
                     color: #999;
                     margin: 0 0 5px 0 ;
-                    padding-right:20px;
                   }
                   &__sentence{
                     color: #999;
                     line-height: 1.4;
                     margin-top: 3px;
                     font-size: 14px;
-                    padding-right:20px;
                   }
                 }
             }
@@ -171,7 +162,7 @@
 .a-side{
   width: 300px;
   margin-left: 20px;
-  //padding-right: 110px;
+  padding-right: 110px;
   float: left;
 
   .p-home_ad{
@@ -501,12 +492,4 @@ text-decoration: none;
 .tag-link{
 color: gray;
 text-decoration: none;
-}
-
-.time{
-  font-size: 12px;
-  color: #999;
-  margin: 0 30px 5px 0 ;
-  //box-sizing: inferit;
-  float: right;
 }
