--- a/app/assets/stylesheets/_timeline.scss
+++ b/app/assets/stylesheets/_timeline.scss
@@ -80,8 +80,7 @@
 
       .main-view{
         margin-bottom: 24px;
-        //min-width: 85vh;
-        width: 75vh;
+        min-width: 85vh;
         background-color: #fff;
         margin: auto 0;
         float: left;
