--- a/app/views/tag_feed/show.html.haml
+++ b/app/views/tag_feed/show.html.haml
@@ -42,6 +42,9 @@
                     %li.tag
                       ●
                       = link_to tag.name, "/tags/#{tag.name}", class: "tag-link"
+              .time_article
+                .time
+                  = "#{article.created_at.strftime('%-m月%d日')}"
               .article__title
                 = link_to article.title, "/articles/#{article.id}", class: "title-text"
               .article__data
