--- a/app/assets/stylesheets/_tag_feed.scss
+++ b/app/assets/stylesheets/_tag_feed.scss
@@ -80,7 +80,8 @@
 
       .main-view{
         margin-bottom: 24px;
-        min-width: 85vh;
+        //min-width: 85vh;
+        width: 75vh;
         background-color: #fff;
         margin: auto 0;
         float: left;
@@ -119,6 +120,7 @@
               padding: 15px 0;
               border-bottom: 1px solid #eee;
               padding-left: 15px;
+              //box-sizing: inferit;
                 .my_picture{
                   margin-left: 20px;
                   float: left;
@@ -128,6 +130,8 @@
                     font-size: 12px;
                     color: #999;
                     margin: 0 0 5px 0 ;
+                    //box-sizing: inferif;
+                    display: flex;
                   }
                   &__title{
                     display: inline-block;
@@ -135,17 +139,20 @@
                     line-height: 1.4;
                     font-size: 18px;
                     font-weight: 700;
+                    padding-right: 20px;
                   }
                   &__tags{
                     font-size: 12px;
                     color: #999;
                     margin: 0 0 5px 0 ;
+                    padding-right: 20px;
                   }
                   &__sentence{
                     color: #999;
                     line-height: 1.4;
                     margin-top: 3px;
                     font-size: 14px;
+                    padding-right:20px;
                   }
                 }
             }
@@ -162,7 +169,7 @@
 .a-side{
   width: 300px;
   margin-left: 20px;
-  padding-right: 110px;
+  //padding-right: 110px;
   float: left;
 
   .p-home_ad{
@@ -492,4 +499,14 @@ text-decoration: none;
 .tag-link{
 color: gray;
 text-decoration: none;
+}
+
+
+
+.time{
+  font-size: 12px;
+  color: #999;
+  margin: 0 30px 5px 0 ;
+  //box-sizing: inferit;
+  float: right;
 }
