--- a/app/assets/stylesheets/_trend.scss
+++ b/app/assets/stylesheets/_trend.scss
@@ -80,7 +80,8 @@
 
       .main-view{
         margin-bottom: 24px;
-        min-width: 85vh;
+        //min-width: 85vh;
+        width: 75vh;
         background-color: #fff;
         margin: auto 0;
         float: left;
@@ -165,7 +166,7 @@
         .a-side{
   width: 300px;
   margin-left: 20px;
-  padding-right: 110px;
+  //padding-right: 110px;
   float: left;
 
   .p-home_ad{
