--- a/app/assets/stylesheets/_articles.scss
+++ b/app/assets/stylesheets/_articles.scss
@@ -32,7 +32,7 @@
           .home {
             height: 20px;
             width: 57px;
-            background-image: url(https://s3-ap-northeast-1.amazonaws.com/miyajimatest/uploads/images/home_off.png);
+            background-image: url("https://s3-ap-northeast-1.amazonaws.com/miyajimatest/uploads/images/home_off.png");
             background-size: 57px 20px;
             margin-left: 50px;
             margin-top: 4px;
@@ -101,7 +101,7 @@
             }
           }
           .home:hover {
-            background-image: url(https://s3-ap-northeast-1.amazonaws.com/miyajimatest/uploads/images/home_on.png);
+            background-image: url("https://s3-ap-northeast-1.amazonaws.com/miyajimatest/uploads/images/home_on.png");
           }
 
           .community {
