細かい修正

--- a/app/views/tag_feed/show.html.haml
+++ b/app/views/tag_feed/show.html.haml
@@ -31,7 +31,8 @@
               .main-label1
                 .label-article
                   タグフィード
-        - @article.each do |article|
+
+        - @articles.each do |article|
           .articles
             .picture
               /= image_tag "python_tag.png", class:"python_tags", alt:""
