--- a/app/views/tags/show.html.haml
+++ b/app/views/tags/show.html.haml
@@ -36,7 +36,7 @@
         .title
           = "フォロワー"
       .explanation
-        = "#{@tag}に関する情報が集まっています。現在#{posts_count.length}件の投稿があります。また#{followers_count.length}人のユーザーがPythonタグをフォローしています。"
+        = "#{@tag}に関する情報が集まっています。現在#{posts_count.length}件の投稿があります。また#{followers_count.length}人のユーザーが#{@tag}タグをフォローしています。"
     .articles
       - taggings = []
       - articles = []
