--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -10,8 +10,23 @@
 %script{:src => "http://cdn.rawgit.com/phi-jp/high/0.0.3/high.js"}
 %script{:src => "http://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"}
 :javascript
-  ${script}
-%script{:src => "../../assets/javascripts/markdown.js", :type => "text/javascript"}
+  window.onload = function() {
+
+    // 要素を取得
+    var editorTA = document.querySelector('.editor .ta');
+
+    var sync = function() {
+        var value = editorTA.value; // テキストエリアから値を取得
+        var md = marked(value); // マークダウンに変換
+        document.getElementById("hello").innerHTML = md;
+    };
+
+    editorTA.onblur = sync;
+
+    sync();
+  };
+
+
 #main
   .wapper
     #container{style: "display: grid;"}
@@ -42,8 +57,6 @@
           .editor
             %textarea.ta= @article.body
           #hello preview
-
-          / = qiita_markdown(simple_format(@article.body))
           .show_footer
             .show_footer_menu
               %span.fa-stack#plane
