editing tag_feed

--- a/app/assets/stylesheets/_tag_feed.scss
+++ b/app/assets/stylesheets/_tag_feed.scss
@@ -7,6 +7,7 @@
   .allWrapper{
     background-color: #f6f6f6;;
     min-height: 200vh;
+    min-width: 1235px;
 
     .container1{
       padding-top: 32px;
