--- a/app/assets/stylesheets/_timeline.scss
+++ b/app/assets/stylesheets/_timeline.scss
@@ -7,6 +7,7 @@
   .allWrapper{
     background-color: #f6f6f6;
     min-height: 250vh;
+    min-width: 1240px;
 
     .container1{
       padding-top: 32px;
