--- a/app/assets/stylesheets/_trend.scss
+++ b/app/assets/stylesheets/_trend.scss
@@ -7,7 +7,7 @@
   .allWrapper{
     background-color: #f6f6f6;
     min-height: 200vh;
-
+    min-width: 1239px;
     .container1{
       padding-top: 32px;
       padding-right: 16px;
