--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -6,7 +6,7 @@
           - if @user.image.blank?
             = image_tag "no-image.png", class: "avatar", alt:""
           - else
-            = image_tag "#{current_user.image}", class: "avatar", alt:"プロフ画"
+            = image_tag "#{@user.image}", class: "avatar", alt:"プロフ画"
         - if @user.id == current_user.id
           .profile__update
             = form_for @user,:url => {:action => 'update'} do |f|
@@ -21,7 +21,7 @@
           .tag-header
             フォロー中のタグ
             - tags = []
-            - for tagging in current_user.taggings
+            - for tagging in @user.taggings
               - tags << tagging.tag.name
           %ul
             - tags.each do |tag|
