--- a/app/views/trend/show.html.haml
+++ b/app/views/trend/show.html.haml
@@ -41,7 +41,10 @@
         - @article.each do |article|
           .articles
             .my_picture
-              = image_tag "profile.jpg", class:"avatar", alt:""
+              - if article.user.image.blank?
+                = image_tag "no-image.png", class: "avatar"
+              - else
+                = image_tag "#{article.user.image}", class: "avatar"
             .article
               .article__title
                 = link_to article.title, "/articles/#{article.id}", class: "title-text"
